Add Content dir to repo

--- a/ThirdPersonProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ThirdPersonProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -231,7 +231,7 @@ ContentBrowserTab4.ThumbnailSize=2
 ContentBrowserTab4.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
+LastLevel=/Game/SacredLands/Developers/Tom/Maps/TestRange_Dev_Tom_Main
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
@@ -240,7 +240,7 @@ CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1282,4 +1282,10 @@ HierarchicalLODOutliner.LastCompileMethod=Unknown
 [Python]
 LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+
+[MRU]
+MRUItem0=/Game/SacredLands/Developers/Tom/Maps/TestRange_Dev_Tom_Main
+
+[ContentBrowserRecent]
+MRUItem0=/Game/SacredLands/Developers/Tom/Maps/TestRange_Dev_Tom_Main
 
